# GBEmu

./: .gitignore  GBEmu.py  GPU.py  MMU.py  README.md  Z80.py  main.py  pyproject.toml  registers.py  test.py
src/gbemu/: GBEmu.py  GPU.py  MMU.py  Z80.py  __init__.py  __main__.py  registers.py
tests/: __init__.py  conftest.py  helpers.py  test_arithmetic.py  test_cb_instructions.py  test_control_flow.py  test_gbemu.py  test_loads.py  test_logic.py  test_misc.py  test_z80_instructions.py
