[project]
name = "gbemu"
version = "0.1.0"
description = "Python Game Boy emulator with Z80 CPU implementation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

